<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.zzsong</groupId>
  <artifactId>ideal-bus</artifactId>
  <packaging>pom</packaging>
  <version>1.1.0-SNAPSHOT</version>

  <modules>
    <module>ideal-bus-abstract</module>
    <module>ideal-bus-broker</module>
    <module>ideal-bus-broker-server</module>
    <module>ideal-bus-client</module>
    <module>ideal-bus-client-spring-boot-starter</module>
    <module>ideal-bus-common</module>
    <module>ideal-bus-samples</module>
    <module>ideal-bus-storage-mongo</module>
    <module>ideal-bus-storage-r2dbc</module>
  </modules>

  <repositories>
    <repository>
      <id>ideal-release</id>
      <name>Ideal Release</name>
      <url>http://192.168.1.182:8081/repository/maven-public/</url>
    </repository>
    <repository>
      <id>ideal-snapshots</id>
      <name>Ideal Snapshots</name>
      <url>http://192.168.1.182:8081/repository/maven-snapshots/</url>
    </repository>
  </repositories>
  <distributionManagement>
    <repository>
      <id>ideal-release</id>
      <name>Ideal Release</name>
      <url>http://192.168.1.182:8081/repository/maven-releases/</url>
    </repository>
    <snapshotRepository>
      <id>ideal-snapshots</id>
      <name>Ideal Snapshots</name>
      <url>http://192.168.1.182:8081/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <guava.version>30.1.1-jre</guava.version>
    <reactor-bom.version>2020.0.6</reactor-bom.version>
    <spring.boot.version>2.4.4</spring.boot.version>
    <lombok.version>1.18.20</lombok.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <docker-maven-plugin.version>1.2.2</docker-maven-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- reactor -->
      <dependency>
        <groupId>io.projectreactor</groupId>
        <artifactId>reactor-bom</artifactId>
        <version>${reactor-bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- spring-boot -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
        <version>${maven-compiler-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <configuration>
          <attach>true</attach>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
